Changed a p to h2, added screen reader links to social list items, fixed contrast issues per wave

--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@
     --fw-bold: 900;
     
     --clr-light: #E5E1E6;
-    --clr-dark: #42495a; 
-    --clr-accent: #A6A1C1;
+    --clr-dark: #2d3037; 
+    --clr-accent: #7C7EAA;
     
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -72,7 +72,7 @@ strong { font-weight: var(--fw-bold) }
     display: inline-block;
     padding: .5em 2.5em;
     background: var(--clr-accent);
-    color: var(--clr-dark);
+    color: black;
     text-decoration: none;
     cursor: pointer;
     font-size: .8rem;
